SS now works, but I think it is still lacking a radiance scaling factor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/nori",
-            "args": ["${workspaceFolder}/scenes/ajax/ajax-gold.xml"],
+            "args": ["${workspaceFolder}/scenes/bunny/bunny.xml"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
