Added morton reordering to obj load, but currently does not improve performance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
         "span": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp",
-        "forward_list": "cpp"
+        "forward_list": "cpp",
+        "tensor": "cpp"
     }
 }
