Compilation fixes for clang

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,7 +97,9 @@
         "forward_list": "cpp",
         "tensor": "cpp",
         "text_encoding": "cpp",
-        "strstream": "cpp"
+        "strstream": "cpp",
+        "__locale": "cpp",
+        "ios": "cpp"
     },
     "ros.distro": "noetic"
 }
