Adapted code for std algorithms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,11 @@
         "text_encoding": "cpp",
         "strstream": "cpp",
         "__locale": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp"
     },
     "ros.distro": "noetic"
 }
