Disable nvc++ from cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(nori)
 
 add_subdirectory(ext ext_build)
 
-set(CMAKE_CXX_COMPILER "nvc++")
+#set(CMAKE_CXX_COMPILER "nvc++")
 
 include_directories(
   # Nori include files
@@ -152,7 +152,7 @@ set_property(TARGET nori PROPERTY CXX_STANDARD 20)
 
 message("CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -noswitcherror -stdpar=gpu")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}") # -noswitcherror -stdpar=gpu
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
