--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,7 +103,8 @@
         "__bit_reference": "cpp",
         "__hash_table": "cpp",
         "__split_buffer": "cpp",
-        "__tree": "cpp"
+        "__tree": "cpp",
+        "__node_handle": "cpp"
     },
     "ros.distro": "noetic"
 }
