--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,7 +101,14 @@
         "strstream": "cpp",
         "codecvt": "cpp",
         "__locale": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "__hash_table": "cpp",
+        "__node_handle": "cpp",
+        "__threading_support": "cpp",
+        "__verbose_abort": "cpp",
+        "locale": "cpp",
+        "print": "cpp",
+        "ranges": "cpp"
     },
     "ros.distro": "noetic"
 }
