--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,7 +108,10 @@
         "__verbose_abort": "cpp",
         "locale": "cpp",
         "print": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "__bit_reference": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp"
     },
     "ros.distro": "noetic"
 }
